# agents-for-ppt

./: Cargo.toml  index.html  package.json  task.txt  viewer.html
sidecars/pptxgen/: README.md  index.js  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: job-management.json  shell-execution.json  workspace-management.json
src-tauri/crates/pptm-domain/: Cargo.toml
src-tauri/crates/pptm-domain/src/: config.rs  errors.rs  lib.rs  project_utils.rs
src-tauri/crates/pptm-domain/src/model/: mod.rs  project.rs
src-tauri/crates/pptm-infra/: Cargo.toml
src-tauri/crates/pptm-infra/src/: lib.rs
src-tauri/crates/pptm-pipeline/: Cargo.toml
src-tauri/crates/pptm-pipeline/src/: lib.rs  orchestrator.rs
src-tauri/crates/pptm-pipeline/src/steps/: mod.rs  pdf_to_md.rs  project_manager.rs  web_to_md.rs
src-tauri/crates/pptm-pipeline/src/steps/finalize/: crop_images.rs  embed_icons.rs  embed_images.rs  fix_image_aspect.rs  flatten_tspan.rs  mod.rs  rect_to_path.rs
src-tauri/crates/pptm-pptx/: Cargo.toml
src-tauri/crates/pptm-pptx/src/: lib.rs
src-tauri/crates/pptm-pptx/src/backend/: mod.rs  native_ooxml.rs  pptxgen_sidecar.rs
src-tauri/icons/: icon.icns
src-tauri/projects/dev_ppt169_20260211/: README.md
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  finalize.rs  ingest.rs  jobs.rs  mod.rs  project.rs
src-tauri/src/events/: mod.rs
src/features/dashboard/: ProjectCard.tsx  ProjectList.tsx
src/features/editor/: ConsolePanel.tsx  ExportPanel.tsx  FileWatcher.tsx  ImportPanel.tsx  MarkdownPreview.tsx  SlideGrid.tsx  SvgCanvas.tsx  WorkspaceLayout.tsx
src/features/onboarding/: NewProjectWizard.tsx
src/features/settings/: ApiKeyForm.tsx  SettingsPage.tsx
src/hooks/: useProject.ts
src/styles/: globals.css
