[package]
name = "pptm-domain"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
