[package]
name = "pptm-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
html-escape = "0.2"
image = "0.25"
lazy_static = "1.4"
pptm-domain = { path = "../pptm-domain" }
pptm-infra = { path = "../pptm-infra" }
quick-xml = { version = "0.31", features = ["serialize"] }
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time"] }
