[package]
name = "pptm-pptx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
pptm-domain = { path = "../pptm-domain" }
quick-xml = { version = "0.36", features = ["serialize"] }
resvg = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tiny-skia = "0.11"
tokio = { version = "1.35", features = ["process", "io-util"] }
usvg = "0.38"
zip = "0.6"
